Customer section design

--- a/public/index.html
+++ b/public/index.html
@@ -6,30 +6,13 @@
     <title>Mysscrow App</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shortcut icon" sizes="196x196" href="">
-    <script src="%PUBLIC_URL%/assets/js/jquery-2.2.3.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/js/popper.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/js/tether-1.2.2.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/js/bootstrap-4.0.0-alpha.6.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.js"></script>
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.css">
 
-
-    <!-- all css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap-4.0.0-alpha.6.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/react-redux-modal.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/react-select.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/react-bootstrap-table.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/react-redux-modal.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/react-select.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/react-datepicker.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/slick.min.css">
-    <link rel='stylesheet' href='/public/css/react-carousel/carousel.min.css'>
-
-
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/common.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/education.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/education_res.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/mysscrow.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/mysscrow_res.css">
 
   </head>
 <body>
